# WISE_Communications_Module

./: README.md
WISE_Client_Comms/java/: pom.xml  pom.xml.in
WISE_Client_Comms/java/src/main/java/ca/wise/comms/client/proto/: FileStream.java  FileStreamOrBuilder.java  FileStreamRequest.java  FileStreamRequestOrBuilder.java  FileStreamResponse.java  FileStreamResponseOrBuilder.java  FileUpload.java
WISE_Client_Comms/proto/: file_upload.proto
WISE_Defaults/: CMakeLists.txt
WISE_Defaults/cpp/: .gitignore  CMakeLists.txt  DefaultsFile.pc.in  manager_settings.pb.cc  manager_settings.pb.h  wise_config.pb.cc  wise_config.pb.h  wise_defaults.pb.cc  wise_defaults.pb.h
WISE_Defaults/java/: pom.xml  pom.xml.in
WISE_Defaults/java/src/main/java/ca/wise/config/proto/: ServerConfiguration.java  ServerConfigurationOrBuilder.java  WiseConfig.java
WISE_Defaults/java/src/main/java/ca/wise/defaults/proto/: JobDefaults.java  JobDefaultsOrBuilder.java  WiseDefaults.java
WISE_Defaults/proto/: manager_settings.proto  wise_config.proto
WISE_Server_Comms/: CMakeLists.txt
WISE_Server_Comms/cpp/: .gitignore  CMakeLists.txt  file_upload.pb.cc  file_upload.pb.h  validation_report.pb.cc  validation_report.pb.h
WISE_Server_Comms/java/: pom.xml  pom.xml.in
WISE_Server_Comms/java/src/main/java/ca/wise/comms/server/proto/: FileUpload.java  FileUploadOrBuilder.java  FileUploadOuterClass.java  GeoserverUpload.java  GeoserverUploadOrBuilder.java  MQTTUpload.java  MQTTUploadOrBuilder.java  ValidationReport.java  ValidationReportOrBuilder.java  ValidationReportOuterClass.java
WISE_Server_Comms/proto/: file_upload.proto  validation_report.proto
WISE_Status/: CMakeLists.txt
WISE_Status/cpp/: ProtoStatus.cpp
WISE_Status/include/: ProtoStatus.h
WISE_Status/java/: .project  pom.xml  pom.xml.in
WISE_Status/java/src/main/java/ca/wise/status/proto/: Status.java  jobStatus.java  jobStatusOrBuilder.java
WISE_Status/proto/: status.proto
